--- a/apps/modelo/templates/modelo/historial_perfil.html
+++ b/apps/modelo/templates/modelo/historial_perfil.html
@@ -52,33 +52,42 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="row justify-content-center mt-3">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="card">
-                    <div class="card-header bg-dark text-white">
-                        Nombre Juego
+    {%  for his in entity  %}
+        <div class="container">
+            <div class="row justify-content-center mt-3">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="card">
+                        <div class="card-header bg-dark text-white">
+                            <h4>{{ his.j_id }}</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="blockquote-footer fx">
+                                <h7>Plataforma : {{his.j_plt}}</h7>
+                                <hr>
+                            </div>
+                            <div class="blockquote-footer fx">
+                                <h7>Fecha : {{his.com_fe}}</h7>
+                                <hr>
+                            </div>
+                            <div class="blockquote-footer fx">
+                                <h7>Monto : $ {{his.com_total}}</h7>
+                                <hr>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <div class="blockquote-footer fx">
-                            <p>Plataforma:</p>
-                        </div>
-                        <div class="blockquote-footer fx">
-                            <p>Fecha:</p>
-                        </div>
-                        <div class="blockquote-footer fx">
-                            <p>Monto:</p>
-                        </div>
-                        <div class="blockquote-footer fx">
-                            <p>Tipo de Facturación:</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
+        <br>
+        <br>
+        
+
+    {% endfor %}
+
+    <div>
+        {%  include 'modelo/paginador.html'  %}
     </div>
-
-
 
 {{ block.super }}
 {%   endblock  %}
