--- a/apps/modelo/templates/modelo/index.html
+++ b/apps/modelo/templates/modelo/index.html
@@ -15,16 +15,20 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'modelo/imagen/1.jpg'%}" class="d-block w-100" alt="...">
+      <img src="{% static 'modelo/imagen/gensin.png'%}" class="d-block w-100" style="max-height: 800px; object-fit: cover; object-position: center center;" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'modelo/imagen/1.2.jpg'%}" class="d-block w-100" alt="...">
+      <img src="{% static 'modelo/imagen/doom.jpg'%}" class="d-block w-100" style="max-height: 800px; object-fit: cover; object-position: center center;" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'modelo/imagen/1.3.jpg'%}" class="d-block w-100" alt="...">
+      <img src="{% static 'modelo/imagen/gtavvv.jpg'%}" class="d-block w-100" style="max-height: 800px; object-fit: cover; object-position: center center;" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'modelo/imagen/rd.png'%}" class="d-block w-100" style="max-height: 800px; object-fit: cover; object-position: center center;" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev " href="#carouselExampleIndicators" role="button" data-slide="prev">
