--- a/apps/modelo/templates/modelo/index.html
+++ b/apps/modelo/templates/modelo/index.html
@@ -10,6 +10,7 @@
 
 {% block main %}
 <!-- inicio carrusel  -->
+
 <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -17,18 +18,18 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
   </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static 'modelo/imagen/gensin.png'%}" class="d-block w-100" style="max-height: 800px; object-fit: cover; object-position: center center;" alt="...">
+  <div class="carousel-inner ">
+    <div class="carousel-item active ">
+      <img src="{% static 'modelo/imagen/gensin.png.jpg'%}" class="d-block w-100 mt-5"  alt="...">
+    </div>
+    <div class="carousel-item  ">
+      <img src="{% static 'modelo/imagen/doom.jpg.jpg'%}" class="d-block w-100 mt-5"  alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'modelo/imagen/doom.jpg'%}" class="d-block w-100" style="max-height: 800px; object-fit: cover; object-position: center center;" alt="...">
+      <img src="{% static 'modelo/imagen/gtavvv.jpg.jpg'%}" class="d-block w-100 mt-5"  alt="...">
     </div>
-    <div class="carousel-item">
-      <img src="{% static 'modelo/imagen/gtavvv.jpg'%}" class="d-block w-100" style="max-height: 800px; object-fit: cover; object-position: center center;" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'modelo/imagen/rd.png'%}" class="d-block w-100" style="max-height: 800px; object-fit: cover; object-position: center center;" alt="...">
+    <div class="carousel-item  ">
+      <img src="{% static 'modelo/imagen/rd.png.jpg'%}" class="d-block w-100 mt-5"  alt="...">
     </div>
   </div>
   <a class="carousel-control-prev " href="#carouselExampleIndicators" role="button" data-slide="prev">
