--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -66,7 +66,7 @@
             <!-- Usuario -->
             {%  if request.user.is_authenticated  %}
             <div>
-                    <a class="navbar-brand" href="{% url 'logout' %}"><i class="fas fa-user text-white " type="button" ></i></a>
+                    <a class="navbar-brand" href="{% url 'logout' %}"><i class="fas fa-door-open" type="button" ></i></a>
                 </div>
             {%  else  %}
             <div>
