--- a/apps/modelo/templates/modelo/juegocomprado.html
+++ b/apps/modelo/templates/modelo/juegocomprado.html
@@ -10,14 +10,17 @@
 {% block main %}
 <!-- Iniciar Sesion-->
 <div  class="container-fluid text-center espacio">
-    <div class="container col-md-9 shadow p-4 mb-4">
+    <div class="container col-md-11 shadow p-4 mb-4">
         <h4 class="title">Muchas gracias por su copmpra en <img src="{% static 'modelo/imagen/Group 1 (1).png'%}" alt=""></a>
         </h4>
         <div class="i modal-footer d-flex justify-content-center">
-            <div><h6 id="owo" class"uwu"></h6></div>
-
-            <div><h5 class="parrafo_carta" >Su compra tuvo un valor de: <h5 id="precioid" class="precioid"></h5></h5></div>
-
+            <div class="col-10">
+                <h6 id="owo" class"uwu"></h6>
+            </div>
+        </div>
+        <div>
+            <h5 class="parrafo_carta" >Su compra tuvo un valor de: <h5 id="precioid" class="precioid"></h5>
+        </h5>
         </div>
     </div>
 </div>
