se capturan datos de la compra

--- a/apps/modelo/templates/modelo/juegos.html
+++ b/apps/modelo/templates/modelo/juegos.html
@@ -92,6 +92,7 @@
             <div class="Fcarta">
                 <img src="{% static 'modelo/imagen/juegos/' %}{{i.j_port}}" class="i-im icarta img-fluid " alt="">
                 <h5 class="i-nom">{{i.j_nom}} </h5>
+                <p  class="i-id" style="display: none;">{{i.j_id}} </p>
 
                 <p class="parrafo_carta">
                     <a  onclick="vermas('mas', '{{i.j_nom}}' );" id="mas">[Ver descripcion]</a>
