API login google falta agregar perfil

--- a/apps/modelo/templates/modelo/login.html
+++ b/apps/modelo/templates/modelo/login.html
@@ -39,6 +39,10 @@
                 </div>
             </form>
 
+              <a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
+        Login
+      </a>
+
         </div>
     </div>
 </div>
