--- a/apps/modelo/templates/modelo/login.html
+++ b/apps/modelo/templates/modelo/login.html
@@ -35,7 +35,7 @@
                 </div>
                 <br>
                 <div class="text-center">
-                    <a class="oauth-container btn darken-4 white black-text" href="{% url 'social:begin' 'google-oauth2' %}" style="text-transform:none">
+                    <a class=" btn darken-4 white black-text" href="{% url 'social:begin' 'google-oauth2' %}" style="text-transform:none">
                         <div class="btn btn-danger">
                             <i class="fab fa-google"></i>
                             Login with Google
