diseño mantenedor listo.-

--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -39,7 +39,7 @@
                         {% endif %}
                     {% if perms.modelo.add_juego %}
                     <li class="nav-item ">
-                        <a class="nav-link " href="{%  url 'juego' %}">Mantenedor de Juegos</a>
+                        <a class="nav-link " href="{%  url 'mantenedor' %}">Mantenedor de Juegos</a>
                     </li>
                     {% endif %}
                     <li class="nav-item ">
