Integracion de API - Compartir en facebook
falta imagen de publicación

--- a/apps/modelo/templates/modelo/index.html
+++ b/apps/modelo/templates/modelo/index.html
@@ -130,4 +130,6 @@
     </a>
   </div>
 </div>
+
+{% comment %} <div class="fb-share-button" data-href="http://127.0.0.1:8000/" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div> {% endcomment %}
 {% endblock main %}
