--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -4,15 +4,29 @@
     {%  load static  %}
     
 <head>
-    <meta charset="UTF-8">
+      <meta charset="utf-8">
+  <title>JugaBuy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      {% comment %} ompartir en facebook  {% endcomment %}
-    <meta property="og:url"           content="http://127.0.0.1:8000/" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="JugaBuy" />
-    <meta property="og:description"   content="Compra tus juegos" />
-    <meta property="og:image"         content="http://127.0.0.1:8000/static/modelo/imagen/doom.jpg.jpg "/>
+ <!-- Primary Meta Tags -->
+<title>JugaBuy</title>
+<meta name="title" content="JugaBuy">
+<meta name="description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="JugaBuy">
+<meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="JugaBuy">
+<meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  
     
     
     {% block nom %}
@@ -141,22 +155,8 @@
         </div>
     </div>
 
-    <div id="fb-root"></div>
-      <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-      fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
-    
-      <!-- Your share button code -->
-      <div class="fb-share-button" 
-         data-href="http://127.0.0.1:8000/" 
-        data-layout="button_count">
-     </div>
-
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0&appId=214604783424459&autoLogAppEvents=1" nonce="m5EVrTb2"></script>
     {% block main %}
     {% endblock main %}
 
@@ -202,11 +202,7 @@
         </div>
 
          <!-- Compartir en Facebook -->
-        <div class="text-center py-3 text-white">
-            <div class="fb-share-button" data-href="http://127.0.0.1:8000/" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
- 
-        </div>
-         <!-- Compartir en Facebook -->
+<div class="fb-share-button" data-href="http://127.0.0.1:8000/" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F127.0.0.1%3A8000%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>         <!-- Compartir en Facebook -->
 
 
         <!-- Copyright -->
