Tcache listo, agregue solo la pagina principal, por si quieren agregar +

--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -3,6 +3,8 @@
 <html lang="en">
     {%  load static  %}
     
+    {% load pwa %}
+    {% progressive_web_app_meta %}
 <head>
       <meta charset="utf-8">
   <title>JugaBuy</title>
