ajuste actualizar perfil, compartir

--- a/apps/modelo/templates/modelo/actualizarperfil.html
+++ b/apps/modelo/templates/modelo/actualizarperfil.html
@@ -4,7 +4,7 @@
  {%  load static  %}
 
     {% block nom %}
-    <title>CrearCuenta_juegaBuy</title>
+    <title>Actualiza_Tus_Datos_juegaBuy</title>
     {% endblock nom %}
 
 
@@ -18,7 +18,7 @@
   <div class="container-fluid espacio">      
     <div class="container col-md-9 shadow p-4 mb-4">
         <div>
-            <h3 class="mb-4">Crear una Cuenta</h3>
+            <h3 class="mb-4">Actualiza Tus Datos de Perfil</h3>
         </div>
         <form method="POST" action="">
 		 {% csrf_token %}           
