--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -204,8 +204,9 @@
         </div>
 
          <!-- Compartir en Facebook -->
-<div class="fb-share-button" data-href="http://127.0.0.1:8000/" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F127.0.0.1%3A8000%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>         <!-- Compartir en Facebook -->
-
+        <div class="text-center py-3 text-white">
+        <div class="fb-share-button" data-href="http://127.0.0.1:8000/" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F127.0.0.1%3A8000%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>         <!-- Compartir en Facebook -->
+        </div>
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3 text-white">© 2020 Copyright:
