--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -5,6 +5,7 @@
     
     {% load pwa %}
     {% progressive_web_app_meta %}
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0&appId=202221024802176&autoLogAppEvents=1" nonce="isp5Zq2j"></script>
 <head>
       <meta charset="utf-8">
   <title>JugaBuy</title>
