--- a/apps/modelo/templates/modelo/novedades.html
+++ b/apps/modelo/templates/modelo/novedades.html
@@ -73,6 +73,11 @@
       </div>
     </div>
   </div>
+  <h5 class="mt-3 text-center" >¿ Tienes alguna opinion sobre estas noticias ?
+                                  Dejanos tu comentario ! </h5>
+    <div id="comentarios" class="fb-comments text-center clol-xs-12 col-md-6 col-lg-6 shadow px-2 py-4" data-href="http://127.0.0.1:8000/Juegos" data-numposts="5" data-width="" >
+      
+  </div>
   {% endblock main %}
 
 
