Botòn Actualizar Juego 98%

--- a/apps/modelo/templates/modelo/plantilla_mantenedor.html
+++ b/apps/modelo/templates/modelo/plantilla_mantenedor.html
@@ -27,11 +27,11 @@
                 <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
                     <li class="">
                         <a class="nav-link text-secondary" id="home-tab" href="{% url 'mantenedor' %}" role="tab"
-                            aria-controls="home" aria-selected="false">Agregar Nuevo Juego</a>
+                            aria-controls="home" aria-selected="false">Nuevo Juego</a>
                     </li>
                     <li class="">
-                        <a class="nav-link text-secondary" id="profile-tab" href="{% url 'modificarJuego' %}" role="tab"
-                            aria-controls="profile" aria-selected="false">Modificar y Eliminar Juego</a>
+                        <a class="nav-link text-secondary" id="profile-tab" href="{% url 'listadoJuego' %}" role="tab"
+                            aria-controls="profile" aria-selected="false">Listado de Juegos</a>
                     </li>
                 </ul>
             </div>
