--- a/apps/modelo/templates/modelo/agregar_juegos.html
+++ b/apps/modelo/templates/modelo/agregar_juegos.html
@@ -8,13 +8,17 @@
 <br>
 <br>
 <div class="container">
+    <div class="">
+        <h5 class="mb-4">Agregar Nuevo Juego.-</h5>
+    </div>
     <form action="{%  url 'agregarJuego'  %}" method="post" enctype="multipart/form-data">
         <div class="d-flex">
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 {%  csrf_token  %}
                 <div class="form-group">
                     <label for="nombre_juego">Nombre Juego</label>
-                    <input type="text" class="form-control" id="" placeholder="" name="nombre_juego" required maxlength="60">
+                    <input type="text" class="form-control" id="" placeholder="" name="nombre_juego" required
+                        maxlength="60">
                 </div>
                 <div class="form-group">
                     <label for="descripcion">Descripcion</label>
@@ -42,7 +46,8 @@
                 <div class="">
                     <div class="form-group">
                         <label for="valor">Valor $</label>
-                        <input type="text" class="form-control" id="" placeholder="" name="valor" required pattern="[0-9]+">
+                        <input type="text" class="form-control" id="" placeholder="" name="valor" required
+                            pattern="[0-9]+">
                     </div>
                     <div class="form-group">
                         <label for="">Fecha de Salida</label>
@@ -51,7 +56,8 @@
                     </div>
                     <div class="form-group">
                         <label for="stock">Stock de Producto</label>
-                        <input type="text" class="form-control" id="" placeholder="" name="stock" required pattern="[0-9]+">
+                        <input type="text" class="form-control" id="" placeholder="" name="stock" required
+                            pattern="[0-9]+">
                     </div>
                     <div class="form-group">
                         <label for="sele_status">Status</label>
