--- a/apps/modelo/templates/modelo/modificar_juego.html
+++ b/apps/modelo/templates/modelo/modificar_juego.html
@@ -1,87 +1,142 @@
-{%  extends 'modelo/plantilla_mantenedor.html' %}
+{%  extends 'modelo/plantilla.html' %}
 
 
 {% load static %}
 
+{% block nom %}
+<title>Modificar Juegos</title>
+{% endblock nom %}
 
-{% block content %}
-
+{% block main %}
 <br>
-
-<div class="row justify-content-end search pr-5">
-    <form class="form-inline">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" name="buscar" value="{{ request.GET.buscar }}">
-        <button class="btn btn-dark" type="submit">Search</button>
-    </form>
-</div>
 <br>
-
-{%  if juegos  %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <table class="table table-image table-responsive">
-                <thead class="thead-dark text-center">
-                    <tr>
-                        <th scope="col" class="" style="white-space: nowrap;">Portada</th>
-                        <th scope="col" class="" style="white-space: nowrap;">Nombre</th>
-                        <th scope="col" class="" style="white-space: nowrap;">Descripcion</th>
-                        <th scope="col" class="" style="white-space: nowrap;">Plataforma</th>
-                        <th scope="col" class="" style="white-space: nowrap;">Precio</th>
-                        <th scope="col" class="" style="white-space: nowrap;">Fecha salida</th>
-                        <th scope="col" class="" style="white-space: nowrap;">Stock</th>
-                        <th scope="col" class="" style="white-space: nowrap;">Status</th>
-                        <th scope="col" class="" style="white-space: nowrap;"><i class="fas fa-cog"></i></th>
-                        <th scope="col" class="" style="white-space: nowrap;"><i class="fas fa-trash-alt"></i></th>
-
-                    </tr>
-                </thead>
-                {% for j in juegos %}
-                <tbody class="text-center">
-                    <tr class="">
-                        <td style="width: 8%;">
-                            {% if j.j_port %}
-                            <img src="{{ j.j_port.url }}" style="display: block;" class="img-fluid img-thumbnail"
-                                alt="Sheep">
-                            {% else %}
-                            <img src="{% static 'modelo/imagen/juego-defecto.jpg'%}" style="display: block;" class="img-fluid img-thumbnail"
-                            alt="Sheep">
-                            {% endif %}
-                        </td>
-                        <td class="small">{{ j.j_nom }}</td>
-                        <td class="small"
-                            style="white-space: nowrap; text-overflow:ellipsis; overflow: hidden; max-width:1px;">
-                            {{ j.j_desc }}</td>
-                        <td class="small">{{ j.j_plt }}</td>
-                        <td class="small">{{ j.j_price }}</td>
-                        <td class="small">{{ j.j_fe_sal }}</td>
-                        <td class="small">{{ j.j_stock }}</td>
-                        <td class="small">
-                            {% if j.j_status == 1 %}
-                            Disponible
-                            {% elif j.j_status == 2 %}
-                            No Disponible
-                            {% else %}
-                            Proximamente
-                            {% endif %}
-                        </td>
-                        <td><button class="btn btn-outline-dark btn-sm" type="submit" id="">Modificar</button></td>
-                        <td><button class="btn btn-outline-dark btn-sm" type="submit" id="">Eliminar</button></td>
-
-                    </tr>
-                    {% endfor %}
-            </table>
-
+<br>
+<br>
+<div class="container">
+    <div class="d-flex">
+        <div class="">
+            <h5 class="mb-4">Modificar Juego.-</h5>
+        </div>
+        <div class="ml-auto">
+            <a class="btn btn-sm btn-outline-dark" type="" href="{%  url 'listadoJuego' %}" id="">Volver al Listado de Juego</a>
         </div>
     </div>
+
+    <form action="{%  url 'modificarJuego' %}" method="post" enctype="multipart/form-data">
+        <div class="d-flex">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                {%  csrf_token  %}
+                <div class="form-group">
+                    <label for="nombre_juego">Nombre Juego</label>
+                    <input type="text" class="form-control" id="" value="{{ juego.j_nom }}" name="nombre_juego" required
+                        maxlength="60">
+                    <input type="hidden" class="form-control" id="" value="{{ juego.j_id }}" name="id_juego" >
+                </div>
+                <div class="form-group">
+                    <label for="descripcion">Descripcion</label>
+                    <!--<input type="textarea" class="form-control" id="" placeholder="" name="descripcion">-->
+                    <p><textarea name="descripcion" type="input" class="form-control" type cols="40" rows="5"
+                            name="descripcion" maxlength="1000">{{ juego.j_desc }}</textarea></p>
+                </div>
+                <div class="form-group">
+                    <label for="plataforma">Plataforma</label>
+                    <select required class="form-control" name="plataforma">
+                        {% if juego.j_plt == "PC" %}
+                            <option value="" disabled>-.Seleccione.-</option>
+                            <option selected value="PC">PC</option>
+                            <option value="PS4">PS4</option>
+                            <option value="XBOX ONE">XBOX ONE</option>
+                            <option value="NINTENDO SWITCH">NINTENDO SWITCH</option>
+                            </select>
+                        </div>
+                        {% elif juego.j_plt == 'PS4' %}
+                            <option value="" disabled>-.Seleccione.-</option>
+                            <option value="PC">PC</option>
+                            <option selected value="PS4">PS4</option>
+                            <option value="XBOX ONE">XBOX ONE</option>
+                            <option value="NINTENDO SWITCH">NINTENDO SWITCH</option>
+                            </select>
+                        </div>
+                        {% elif juego.j_plt == 'XBOX ONE' %}
+                            <option value="" disabled>-.Seleccione.-</option>
+                            <option value="PC">PC</option>
+                            <option value="PS4">PS4</option>
+                            <option selected value="XBOX ONE">XBOX ONE</option>
+                            <option value="NINTENDO SWITCH">NINTENDO SWITCH</option>
+                            </select>
+                        </div>
+                        {% elif juego.j_plt == 'NINTENDO SWITCH' %}
+                            <option value="" disabled>-.Seleccione.-</option>
+                            <option value="PC">PC</option>
+                            <option value="PS4">PS4</option>
+                            <option value="XBOX ONE">XBOX ONE</option>
+                            <option selected value="NINTENDO SWITCH">NINTENDO SWITCH</option>
+                            </select>
+                        </div>
+                        {% endif %}
+                    
+                
+                <div class="form-group">
+                    <label for="foto_portada">Foto portada</label>
+                    <input type="file" class="form-control" id="" placeholder="" accept="image/*" name="foto_portada" disabled>
+                </div>
+            </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="">
+                    <div class="form-group">
+                        <label for="valor">Valor $</label>
+                        <input type="text" class="form-control" id="" placeholder="" name="valor" value="{{ juego.j_price }}" required
+                            pattern="[0-9]+">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Fecha de Salida</label>
+                        <input type="date" class="form-control" name="fecha_salida" value="{{ juego.j_fe_sal }}" required>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="stock">Stock de Producto</label>
+                        <input type="text" class="form-control" id="" placeholder="" name="stock" value="{{ juego.j_stock }}" required
+                            pattern="[0-9]+">
+                    </div>
+                    <div class="form-group">
+                        <label for="sele_status">Status</label>
+                        <select required class="form-control" name="sele_status">
+                            {% if juego.j_status == 1 %}
+                                <option value="" disabled>-.Seleccione.-</option>
+                                <option selected value="1">Disponible</option>
+                                <option value="2">No Disponible</option>
+                                <option value="3">Proximamente</option>
+                                </select>
+                            </div>
+                            {% elif juego.j_status == 2 %}
+                                <option value="" disabled>-.Seleccione.-</option>
+                                <option value="1">Disponible</option>
+                                <option selected value="2">No Disponible</option>
+                                <option value="3">Proximamente</option>
+                                </select>
+                            </div>
+                            {% elif juego.j_status == 3 %}
+                                <option value="" disabled>-.Seleccione.-</option>
+                                <option value="1">Disponible</option>
+                                <option value="2">No Disponible</option>
+                                <option selected value="3">Proximamente</option>
+                                </select>
+                            </div>
+                            {% endif %}
+                </div>
+
+                <div class="text-right">
+                    <br>
+                    <br>
+                    <button class="btn btn-dark bt" type="submit" id="">Guardar Cambios</button>
+                    <br>
+                    <br>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
-{%  else  %}
-<div>
-    {%  include 'modelo/no_encontrado.html'  %}
-</div>
-{% endif %}
 
-
-
-{{ block.super }}
 {% endblock %}
