--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
+    
 </head>
 
 <body onload="idpre();">
@@ -160,6 +160,12 @@
 
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0&appId=214604783424459&autoLogAppEvents=1" nonce="m5EVrTb2"></script>
+    
+
+
+
+
+
     {% block main %}
     {% endblock main %}
 
@@ -237,6 +243,26 @@
     <script src="https://kit.fontawesome.com/1dbd616d3c.js" crossorigin="anonymous"></script>
 
     <script src="{% static 'modelo/js/juegos.js'%}"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- Include the Dark theme -->
+    
+
+    <script src="sweetalert2/dist/sweetalert2.min.js"></script>
+    
+
+    {% if messages %}
+    {% for m in messages %}
+        <script>
+            Swal.fire({
+                "title": "Felicitaciones",
+                "text": "{{m}}",
+                "icon":"success"
+            })
+        </script>
+    {% endfor %}
+    {% endif %}
+
 
 </body>
 
