--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -255,7 +255,7 @@
     {% for m in messages %}
         <script>
             Swal.fire({
-                "title": "Felicitaciones",
+                "title": "AVISO",
                 "text": "{{m}}",
                 "icon":"success"
             })
