--- a/apps/modelo/templates/modelo/register.html
+++ b/apps/modelo/templates/modelo/register.html
@@ -53,6 +53,8 @@
               </div>
               <div class="form-group col-md-6">
                 {{perfilform.us_nac|as_crispy_field}}
+				
+                <input type="date" class="form-control" id="inputDate">
               </div>
             </div>
             <div class="form-row">
