--- a/apps/modelo/templates/modelo/index.html
+++ b/apps/modelo/templates/modelo/index.html
@@ -69,19 +69,18 @@
       <!--primera fila Recien llegados -->
       <div class="row justify-content-around m-2 d-sm-inline-flex">
         <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-          <img src="{% static 'modelo/imagen/juegos/P4_1.jpg'%}" class="img-fluid " alt="">
-          <h5 class="mt-3">NBA 2K21 PS4</h5>
+          <img src="{% static 'modelo/imagen/kakarot.jpg'%}" class="img-fluid " alt="">
+          <h5 class="mt-3">KAKAROT</h5>
           <p class="lead">$49.990</p>
         </div>
         <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-          <img src="{% static 'modelo/imagen/juegos/P4_2.jpg'%}" class="img-fluid " alt="">
-          <h5 class="mt-3">Fifa 21</h5>
+          <img src="{% static 'modelo/imagen/HALO.jpg'%}" class="img-fluid " alt="">
+          <h5 class="mt-3">HALO</h5>
           <p class="lead">$52.990</p>
         </div>
         <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
-          <img src="{% static 'modelo/imagen/juegos/P4_3.jpg'%}" class="img-fluid " alt="">
-          <h5 class="mt-3">Marvel’s Avengers</h5>
-          <h5>PS4</h5>
+          <img src="{% static 'modelo/imagen/cyber.jpg'%}" class="img-fluid " alt="">
+          <h5 class="mt-3">CyperPunk 2077</h5>
           <p class="lead">$32.990</p>
         </div>
       </div>
